; ModuleID = '/home/carl/AnghaBench/h2o/lib/http2/extr_connection.c_execute_or_enqueue_request.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/http2/extr_connection.c_execute_or_enqueue_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64, i32 }

@H2O_HTTP2_STREAM_STATE_RECV_HEADERS = common dso_local global i64 0, align 8
@H2O_HTTP2_STREAM_STATE_REQ_PENDING = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_7__*)* @execute_or_enqueue_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @execute_or_enqueue_request(i32* %0, %struct.TYPE_7__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_7__*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %4, align 8
  %5 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @H2O_HTTP2_STREAM_STATE_RECV_HEADERS, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %16, label %10

10:                                               ; preds = %2
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @H2O_HTTP2_STREAM_STATE_REQ_PENDING, align 8
  %15 = icmp eq i64 %13, %14
  br label %16

16:                                               ; preds = %10, %2
  %17 = phi i1 [ true, %2 ], [ %15, %10 ]
  %18 = zext i1 %17 to i32
  %19 = call i32 @assert(i32 %18)
  %20 = load i32*, i32** %3, align 8
  %21 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %22 = call i64 @reset_stream_if_disregarded(i32* %20, %struct.TYPE_7__* %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %16
  br label %42

25:                                               ; preds = %16
  %26 = load i32*, i32** %3, align 8
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %28 = load i64, i64* @H2O_HTTP2_STREAM_STATE_REQ_PENDING, align 8
  %29 = call i32 @h2o_http2_stream_set_state(i32* %26, %struct.TYPE_7__* %27, i64 %28)
  %30 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %31 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %38, label %34

34:                                               ; preds = %25
  %35 = load i32*, i32** %3, align 8
  %36 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %37 = call i32 @h2o_http2_stream_set_blocked_by_server(i32* %35, %struct.TYPE_7__* %36, i32 1)
  br label %38

38:                                               ; preds = %34, %25
  %39 = load i32*, i32** %3, align 8
  %40 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %41 = call i32 @execute_or_enqueue_request_core(i32* %39, %struct.TYPE_7__* %40)
  br label %42

42:                                               ; preds = %38, %24
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @reset_stream_if_disregarded(i32*, %struct.TYPE_7__*) #1

declare dso_local i32 @h2o_http2_stream_set_state(i32*, %struct.TYPE_7__*, i64) #1

declare dso_local i32 @h2o_http2_stream_set_blocked_by_server(i32*, %struct.TYPE_7__*, i32) #1

declare dso_local i32 @execute_or_enqueue_request_core(i32*, %struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
